WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34172
Using JavaScriptCore API with a webkit vended context can result in slow script dialog
https://bugs.webkit.org/show_bug.cgi?id=34172
Summary
Using JavaScriptCore API with a webkit vended context can result in slow scri...
Oliver Hunt
Reported
2010-01-26 11:18:29 PST
Using JavaScriptCore API with a webkit vended context can result in slow script dialog
Attachments
Patch
(2.11 KB, patch)
2010-01-26 11:19 PST
,
Oliver Hunt
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2010-01-26 11:19:37 PST
Created
attachment 47423
[details]
Patch
Geoffrey Garen
Comment 2
2010-01-26 11:21:19 PST
Comment on
attachment 47423
[details]
Patch r=me
Oliver Hunt
Comment 3
2010-01-26 11:23:04 PST
Committed
r53860
: <
http://trac.webkit.org/changeset/53860
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug