2010-01-26  Oliver Hunt  <oliver@apple.com>

Reviewed by Geoffrey Garen.

        Using JavaScriptCore API with a webkit vended context can result in slow script dialog
        https://bugs.webkit.org/show_bug.cgi?id=34172

        Make the APIShim correctly increment and decrement the timeout
        entry counter.

        * API/APIShims.h:
        (JSC::APIEntryShimWithoutLock::APIEntryShimWithoutLock):
        (JSC::APIEntryShimWithoutLock::~APIEntryShimWithoutLock):
        (JSC::APICallbackShim::APICallbackShim):
        (JSC::APICallbackShim::~APICallbackShim):

Canonical link: https://commits.webkit.org/45243@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53860 268f45cc-cd09-0410-ab3c-d52691b4dbfc