JavaScriptCore/API/APIShims.h
@@ -34,18 +34,22 @@ namespace JSC {
 class APIEntryShimWithoutLock {
 protected:
     APIEntryShimWithoutLock(JSGlobalData* globalData, bool registerThread)
-        : m_entryIdentifierTable(setCurrentIdentifierTable(globalData->identifierTable))
+        : m_globalData(globalData)
+        , m_entryIdentifierTable(setCurrentIdentifierTable(globalData->identifierTable))
     {
         if (registerThread)
             globalData->heap.registerThread();
+        m_globalData->timeoutChecker.start();
     }
 
     ~APIEntryShimWithoutLock()
     {
+        m_globalData->timeoutChecker.stop();
         setCurrentIdentifierTable(m_entryIdentifierTable);
     }
 
 private:
+    JSGlobalData* m_globalData;
     IdentifierTable* m_entryIdentifierTable;
 };
 
@@ -76,10 +80,12 @@ public:
         , m_globalData(&exec->globalData())
     {
         resetCurrentIdentifierTable();
+        m_globalData->timeoutChecker.start();
     }
 
     ~APICallbackShim()
     {
+        m_globalData->timeoutChecker.stop();
         setCurrentIdentifierTable(m_globalData->identifierTable);
     }
 
